# PubChemPy

./: Makefile  README.rst  conftest.py  pubchempy.py  pyproject.toml  tox.ini
.github/workflows/: build_wheel.yml  pytest.yml  tox.yml
docs/source/guide/: contribute.rst
requirements/: analysis.txt  dev.txt
tests/: test_compound.py  test_download.py  test_pandas.py  test_properties.py  test_requests.py  test_substance.py
